--- a/package.json
+++ b/package.json
@@ -1,27 +1,44 @@
 {
-  "author": "Josh Goldberg <npm@joshuakgoldberg.com>",
-  "bugs": {
-    "url": "https://github.com/JoshuaKGoldberg/refined-saved-replies/issues"
-  },
-  "dependencies": {
-    "js-yaml": "^4.1.0"
-  },
-  "description": "A Chrome extension for GitHub's [Saved Replies](https://docs.github.com/en/get-started/writing-on-github/working-with-saved-replies/using-saved-replies) that adds replies from a repository's `.github/replies.yml`.",
-  "homepage": "https://github.com/JoshuaKGoldberg/refined-saved-replies#readme",
-  "license": "MIT",
-  "name": "refined-saved-replies",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JoshuaKGoldberg/refined-saved-replies.git"
-  },
-  "scripts": {
-    "build": "esbuild src/content-script.ts --bundle --minify --outfile=lib/content-script.js --sourcemap",
-    "compile": "tsc"
-  },
-  "version": "1.0.0",
-  "devDependencies": {
-    "@types/js-yaml": "^4.0.5",
-    "esbuild": "^0.15.5",
-    "typescript": "^4.7.4"
-  }
+	"author": "Josh Goldberg <npm@joshuakgoldberg.com>",
+	"bugs": {
+		"url": "https://github.com/JoshuaKGoldberg/refined-saved-replies/issues"
+	},
+	"dependencies": {
+		"js-yaml": "^4.1.0"
+	},
+	"description": "A Chrome extension for GitHub's [Saved Replies](https://docs.github.com/en/get-started/writing-on-github/working-with-saved-replies/using-saved-replies) that adds replies from a repository's `.github/replies.yml`.",
+	"devDependencies": {
+		"@types/js-yaml": "^4.0.5",
+		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.35.1",
+		"commitlint": "^17.0.3",
+		"cspell": "^6.8.0",
+		"esbuild": "^0.15.5",
+		"eslint": "^8.22.0",
+		"eslint-config-prettier": "^8.5.0",
+		"husky": "^8.0.1",
+		"jest": "^29.0.0",
+		"markdownlint-cli": "^0.32.2",
+		"prettier": "^2.7.1",
+		"pretty-quick": "^3.1.3",
+		"typescript": "^4.8.2"
+	},
+	"homepage": "https://github.com/JoshuaKGoldberg/refined-saved-replies#readme",
+	"license": "MIT",
+	"name": "refined-saved-replies",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/JoshuaKGoldberg/refined-saved-replies.git"
+	},
+	"scripts": {
+		"build": "esbuild src/content-script.ts --bundle --minify --outfile=lib/content-script.js --sourcemap",
+		"compile": "tsc",
+		"format": "prettier \"**/*\" --ignore-unknown",
+		"format:write": "yarn format --write",
+		"lint": "npx eslint \"src/*.ts\"  --max-warnings 0 --report-unused-disable-directives",
+		"lint:md": "npx markdownlint \"**/*.md\" \".github/**/*.md\"",
+		"lint:spelling": "cspell \"**\" \".github/**/*\"",
+		"prepare": "husky install"
+	},
+	"version": "1.0.0"
 }
