feat: add `.nvmrc` and package.json `engines` key (#69)
* feat: add `.nvmrc`

* feat: add `engines` key to `package.json`

--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
 		"zip": "node script/zip.js"
 	},
 	"type": "module",
-	"version": "0.1.0"
+	"version": "0.1.0",
+	"engines": {
+		"node": ">=18"
+	}
 }
