--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+		"allowSyntheticDefaultImports": true,
 		"moduleResolution": "node",
 		"noEmit": true,
 		"skipLibCheck": true,
