--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
 		"eslint-config-prettier": "^8.5.0",
 		"husky": "^8.0.2",
 		"jest": "^29.0.0",
+		"lint-staged": "^13.2.1",
 		"markdownlint-cli": "^0.32.2",
 		"prettier": "^2.7.1",
-		"pretty-quick": "^3.1.3",
 		"typescript": "^4.9.3",
 		"zip-lib": "^0.7.3"
 	},
@@ -43,6 +43,9 @@
 		"lint:spelling": "cspell \"**\" \".github/**/*\"",
 		"prepare": "husky install",
 		"zip": "node script/zip.js"
+	},
+	"lint-staged": {
+		"*": "prettier --ignore-unknown --write"
 	},
 	"type": "module",
 	"version": "0.2.0",
