--- a/.github/ISSUE_TEMPLATE/01-bug.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug.yml
@@ -1,8 +1,3 @@
-name: "🛠 Tooling"
-description: "Report a bug or request an enhancement in repository tooling"
-title: "🛠 Tooling: <short description of the change>"
-labels:
-  - "area: tooling"
 body:
   - attributes:
       description: If any of these required steps are not taken, we may not be able to review your issue. Help us to help you!
@@ -12,16 +7,27 @@ body:
           required: true
         - label: I have pulled the latest `main` branch of the repository.
           required: true
-        - label: I have [searched for related issues](https://github.com/JoshuaKGoldberg/refined-saved-replies/issues?q=is%3Aissue+label%3A%22area%3A+tooling%22) and found none that matched my issue.
+        - label: I have [searched for related issues](https://github.com/JoshuaKGoldberg/refined-saved-replies/issues?q=is%3Aissue) and found none that matched my issue.
           required: true
     type: checkboxes
   - attributes:
-      description: What did you expect to be able to do?
-      label: Overview
+      description: What did you expect to happen?
+      label: Expected
     type: textarea
     validations:
       required: true
   - attributes:
-      label: Additional Info
-      description: Any additional info you'd like to provide.
+      description: What happened instead?
+      label: Actual
     type: textarea
+    validations:
+      required: true
+  - attributes:
+      description: Any additional info you'd like to provide.
+      label: Additional Info
+    type: textarea
+description: Report a bug trying to run the code
+labels:
+  - "type: bug"
+name: 🐛 Bug
+title: "🐛 Bug: <short description of the bug>"
