--- a/.github/ISSUE_TEMPLATE/03-feature.yml
+++ b/.github/ISSUE_TEMPLATE/03-feature.yml
@@ -1,8 +1,3 @@
-name: "🐛 Report a Bug"
-description: "Report a bug trying to run the code."
-title: "🐛 Bug: <short description of the bug>"
-labels:
-  - "type: bug"
 body:
   - attributes:
       description: If any of these required steps are not taken, we may not be able to review your issue. Help us to help you!
@@ -12,22 +7,21 @@ body:
           required: true
         - label: I have pulled the latest `main` branch of the repository.
           required: true
-        - label: I have [searched for related issues](https://github.com/JoshuaKGoldberg/refined-saved-replies/issues?q=is%3Aissue+label%3A%22type%3A+bug%22) and found none that matched my issue.
+        - label: I have [searched for related issues](https://github.com/JoshuaKGoldberg/refined-saved-replies/issues?q=is%3Aissue) and found none that matched my issue.
           required: true
     type: checkboxes
   - attributes:
-      description: What did you expect to happen?
-      label: Expected
+      description: What did you expect to be able to do?
+      label: Overview
     type: textarea
     validations:
       required: true
   - attributes:
-      description: What happened instead?
-      label: Actual
-    type: textarea
-    validations:
-      required: true
-  - attributes:
-      label: Additional Info
       description: Any additional info you'd like to provide.
+      label: Additional Info
     type: textarea
+description: Request that a new feature be added or an existing feature improved
+labels:
+  - "type: feature"
+name: 🚀 Feature
+title: "🚀 Feature: <short description of the feature>"
