--- a/package.json
+++ b/package.json
@@ -1,55 +1,95 @@
 {
-	"author": "Josh Goldberg <npm@joshuakgoldberg.com>",
+	"name": "refined-saved-replies",
+	"version": "0.0.0",
+	"description": "Chrome extension for GitHub's Saved Replies that adds replies from a repository's .github/replies.yml. 📨",
+	"homepage": "https://github.com/JoshuaKGoldberg/refined-saved-replies#readme",
 	"bugs": {
 		"url": "https://github.com/JoshuaKGoldberg/refined-saved-replies/issues"
 	},
-	"dependencies": {
-		"js-yaml": "^4.1.0",
-		"mustache": "^4.2.0"
-	},
-	"description": "A Chrome extension for GitHub's [Saved Replies](https://docs.github.com/en/get-started/writing-on-github/working-with-saved-replies/using-saved-replies) that adds replies from a repository's `.github/replies.yml`.",
-	"devDependencies": {
-		"@types/js-yaml": "^4.0.5",
-		"@types/mustache": "^4.2.1",
-		"@typescript-eslint/eslint-plugin": "^5.43.0",
-		"@typescript-eslint/parser": "^5.43.0",
-		"commitlint": "^17.0.3",
-		"cspell": "^6.14.3",
-		"esbuild": "^0.15.14",
-		"eslint": "^8.22.0",
-		"eslint-config-prettier": "^8.5.0",
-		"husky": "^8.0.2",
-		"jest": "^29.0.0",
-		"lint-staged": "^13.2.1",
-		"markdownlint-cli": "^0.32.2",
-		"prettier": "^2.7.1",
-		"typescript": "^4.9.3",
-		"zip-lib": "^0.7.3"
-	},
-	"homepage": "https://github.com/JoshuaKGoldberg/refined-saved-replies#readme",
-	"license": "MIT",
-	"name": "refined-saved-replies",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/JoshuaKGoldberg/refined-saved-replies.git"
+		"url": "https://github.com/JoshuaKGoldberg/refined-saved-replies"
 	},
+	"license": "MIT",
+	"author": {
+		"name": "JoshuaKGoldberg",
+		"email": "npm@joshuakgoldberg.com"
+	},
+	"type": "module",
+	"main": "./lib/index.js",
+	"files": [
+		"lib/",
+		"package.json",
+		"LICENSE.md",
+		"README.md"
+	],
 	"scripts": {
 		"build": "esbuild src/content-script.ts --bundle --minify --outfile=lib/content-script.js --sourcemap",
-		"compile": "tsc",
 		"format": "prettier \"**/*\" --ignore-unknown",
-		"format:write": "yarn format --write",
-		"lint": "npx eslint \"src/*.ts\"  --max-warnings 0 --report-unused-disable-directives",
-		"lint:md": "npx markdownlint \"**/*.md\" \".github/**/*.md\"",
+		"lint": "eslint . .*js --max-warnings 0 --report-unused-disable-directives",
+		"lint:knip": "knip",
+		"lint:md": "markdownlint \"**/*.md\" \".github/**/*.md\" --rules sentences-per-line",
+		"lint:package-json": "npmPkgJsonLint .",
+		"lint:packages": "pnpm dedupe --check",
 		"lint:spelling": "cspell \"**\" \".github/**/*\"",
 		"prepare": "husky install",
+		"should-semantic-release": "should-semantic-release --verbose",
+		"test": "vitest",
+		"tsc": "tsc",
 		"zip": "node script/zip.js"
 	},
 	"lint-staged": {
 		"*": "prettier --ignore-unknown --write"
 	},
-	"type": "module",
-	"version": "0.4.0",
+	"dependencies": {
+		"js-yaml": "^4.1.0",
+		"mustache": "^4.2.0"
+	},
+	"devDependencies": {
+		"@types/eslint": "^8.44.7",
+		"@types/js-yaml": "^4.0.5",
+		"@types/mustache": "^4.2.1",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@typescript-eslint/parser": "^6.10.0",
+		"@vitest/coverage-v8": "^0.34.6",
+		"console-fail-test": "^0.2.3",
+		"cspell": "^8.0.0",
+		"esbuild": "^0.19.5",
+		"eslint": "^8.53.0",
+		"eslint-plugin-deprecation": "^2.0.0",
+		"eslint-plugin-eslint-comments": "^3.2.0",
+		"eslint-plugin-jsdoc": "^46.9.0",
+		"eslint-plugin-jsonc": "^2.10.0",
+		"eslint-plugin-markdown": "^3.0.1",
+		"eslint-plugin-n": "^16.3.1",
+		"eslint-plugin-no-only-tests": "^3.1.0",
+		"eslint-plugin-perfectionist": "^2.3.0",
+		"eslint-plugin-regexp": "^2.1.1",
+		"eslint-plugin-vitest": "^0.3.9",
+		"eslint-plugin-yml": "^1.10.0",
+		"husky": "^8.0.3",
+		"jsonc-eslint-parser": "^2.4.0",
+		"knip": "^2.41.0",
+		"lint-staged": "^15.1.0",
+		"markdownlint": "^0.31.1",
+		"markdownlint-cli": "^0.37.0",
+		"npm-package-json-lint": "^7.1.0",
+		"npm-package-json-lint-config-default": "^6.0.0",
+		"prettier": "^3.0.3",
+		"prettier-plugin-curly": "^0.1.3",
+		"prettier-plugin-packagejson": "^2.4.6",
+		"sentences-per-line": "^0.2.1",
+		"should-semantic-release": "^0.2.1",
+		"typescript": "^5.2.2",
+		"vitest": "^0.34.6",
+		"yaml-eslint-parser": "^1.2.2",
+		"zip-lib": "^0.7.3"
+	},
+	"packageManager": "pnpm@8.7.0",
 	"engines": {
 		"node": ">=18"
+	},
+	"publishConfig": {
+		"provenance": true
 	}
 }
