--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
 	"compilerOptions": {
-		"allowSyntheticDefaultImports": true,
-		"moduleResolution": "node",
+		"declaration": true,
+		"declarationMap": true,
+		"esModuleInterop": true,
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"noEmit": true,
+		"outDir": "lib",
+		"resolveJsonModule": true,
 		"skipLibCheck": true,
+		"sourceMap": true,
 		"strict": true,
-		"target": "ES2021"
+		"target": "ES2022"
 	},
 	"include": ["src"]
 }
