docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -60,10 +60,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/6335792?v=4",
       "profile": "https://paulisaweso.me/",
       "contributions": [
-        "tool",
-        "doc",
-        "code",
-        "maintenance"
+        "doc"
       ]
     },
     {
