feat: add Firefox support with web-ext (#177)
## PR Checklist

- [x] Addresses an existing open issue: starts on #7
- [x] That issue was marked as [`status: accepting
prs`](https://github.com/JoshuaKGoldberg/refined-saved-replies/issues?q=is%3Aopen+is%3Aissue+label%3A%22status%3A+accepting+prs%22)
- [x] Steps in
[CONTRIBUTING.md](https://github.com/JoshuaKGoldberg/refined-saved-replies/blob/main/.github/CONTRIBUTING.md)
were taken

## Overview

Adds https://extensionworkshop.com's `web-ext` tool instead of the
existing `zip` script to build a Firefox-ready zip, and adds development
+ production docs for Firefox alongside the existing Chrome ones.

Doesn't yet look into Edge or Safari. That can be a next step or two for
the rest of #7.

cc @estevezluis @schalkneethling - builds off the changes in #153.

Co-authored-by: Schalk Neethling <schalk@mechanical.ink>
Co-authored-by: Luis Estevez <contact@luisestevez.me>

--- a/.github/workflows/lint-web-ext.yml
+++ b/.github/workflows/lint-web-ext.yml
@@ -1,12 +1,13 @@
 jobs:
-  build:
+  lint_web_ext:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/prepare
-      - run: pnpm build
+      - run: pnpm dev
+      - run: pnpm lint:web-ext
 
-name: Build
+name: Lint Web Ext
 
 on:
   pull_request: ~
