docs: add joshuakgoldberg as a contributor for ideas (#238)
Adds @joshuakgoldberg as a contributor for ideas.

This was requested by JoshuaKGoldberg [in this
comment](https://github.com/JoshuaKGoldberg/refined-saved-replies/issues/7#issuecomment-1895230100)

---------

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -47,11 +47,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/3335181?v=4",
       "profile": "http://www.joshuakgoldberg.com/",
       "contributions": [
-        "bug",
-        "tool",
-        "code",
         "doc",
-        "maintenance"
+        "ideas"
       ]
     },
     {
