docs: add joshuakgoldberg as a contributor for bug (#461)
Adds @joshuakgoldberg as a contributor for bug.

This was requested by JoshuaKGoldberg [in this
comment](https://github.com/JoshuaKGoldberg/refined-saved-replies/issues/43#issuecomment-2144074999)

---------

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -48,7 +48,8 @@
       "profile": "http://www.joshuakgoldberg.com/",
       "contributions": [
         "doc",
-        "ideas"
+        "ideas",
+        "bug"
       ]
     },
     {
