--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -47,9 +47,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/3335181?v=4",
       "profile": "http://www.joshuakgoldberg.com/",
       "contributions": [
-        "doc",
-        "ideas",
-        "bug"
+        "maintenance"
       ]
     },
     {
