docs: add joshuakgoldberg as a contributor for doc (#470)
Adds @joshuakgoldberg as a contributor for doc.

This was requested by JoshuaKGoldberg [in this
comment](https://github.com/JoshuaKGoldberg/refined-saved-replies/pull/8#issuecomment-2146364528)

---------

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -47,7 +47,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/3335181?v=4",
       "profile": "http://www.joshuakgoldberg.com/",
       "contributions": [
-        "maintenance"
+        "maintenance",
+        "doc"
       ]
     },
     {
